testsuite/poke.pkl/asm-stmt-diag-5.pk
/* { dg-do compile } */

var s = "foo";

asm (s + "bar"); /* { dg-error "constant" } */
